--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,8 @@
     "@types/react-dom": "^18.2.19",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.20",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "next": "14.1.4",
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
@@ -33,16 +35,18 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.5.3",
+    "@vitest/coverage-v8": "^2.1.0",
     "autoprefixer": "^10.4.17",
     "jsdom": "^23.2.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.3.3",
-    "vitest": "^1.5.3"
+    "vite": "^5.4.0",
+    "vitest": "^2.1.0"
   }
 }
