fix(build): filter Turborepo build to only web app for Phase 1
Skip building unused services to avoid build failures

Changes:
- Update 'build' script to use --filter=@digital-astrology/web
- Add 'build:all' script to build all packages when needed

Why:
Phase 1 MVP only needs @digital-astrology/web and its dependencies:
- @digital-astrology/schemas (database models)
- @digital-astrology/ui (shared components)
- @digital-astrology/config (shared config)
- @digital-astrology/lib (utilities)

Skips building services not needed for Phase 1:
- @digital-astrology/notifications (has type definition issues)
- @digital-astrology/identity (not used in Phase 1)
- @digital-astrology/astro-core (not used in Phase 1)
- @digital-astrology/commerce (not used in Phase 1)
- @digital-astrology/consultations (not used in Phase 1)
- @digital-astrology/admin (separate app)

This allows Vercel deployment to succeed without blocking on
unused service compilation errors.

Related to: Phase 1 MVP Vercel deployment

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "turbo dev",
-    "build": "turbo build",
+    "build": "turbo build --filter=@digital-astrology/web",
+    "build:all": "turbo build",
     "lint": "turbo lint",
     "test": "turbo test",
     "format": "prettier --write ."
