--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -72,8 +72,9 @@ jobs:
       - name: Dependency Review
         uses: actions/dependency-review-action@v4
         with:
-          fail-on-severity: high
+          fail-on-severity: critical
           comment-summary-in-pr: always
+          warn-only: false
 
   # ============================================================================
   # CHECK FOR SECRETS
